# gpatient

./: .cproject  .gitignore  .project  README  configure.ac  herbanaria.sqlite  patient.sublime-workspace
data/icons/hicolor/: Makefile.am  icon-theme.cache
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
herbanaria-0.1/: AUTHORS
src/: Makefile.am  configuration.cpp  configuration.h  login-window.cpp  login-window.h  main-window.cpp  main-window.h  main.cpp  main.h  patient-window.cpp  patient-window.h  person.cpp  person.h  util.cpp  util.h  visit.cpp  visit.h  visitswindow.cc  visitswindow.h
src/configuration/: configuration.cpp  configuration.h  key.cpp  key.h  section.cpp  section.h
src/database/: 00-database.sql  01-triggers.sql  02-data.sql  02-visists.sql  03-configurations.sql  Update 01.sql  Update 02.sql  test-person.sql
src/db/: allergy.cpp  allergy.h  dbhandler.cpp  dbhandler.h  list-status.h  state.h  subvisit-interface.cpp  subvisit-interface.h  visit-interface.cpp  visit-interface.h
src/exceptions/: sql-connection.cpp  sql-connection.h
src/ui/: main-visit.glade  main-window.cpp  main-window.h  new-visit-alternative.glade  new-visit-last-back.glade  new-visit-last.glade  new-visit.glade  patient-window.cpp  patient-window.h  subvisit-window.cpp  subvisit-window.h  subvisits-window.glade  view-patient.cpp  view-patient.glade  view-patient.h  visitswindow.cpp  visitswindow.h
src/ui/widgets/: calendar-window.cpp  calendar-window.h  date-entry.cpp  date-entry.h  numeric-entry.cpp  numeric-entry.h  widgets.h
test/: herbanaria-empty.sqlite  herbanaria.sqlite  person-data.sql
